Refactoring, conccurent client

--- a/LAB/gnu/getopt/MessagesBundle_cs.properties
+++ b/LAB/gnu/getopt/MessagesBundle_cs.properties
@@ -20,14 +20,14 @@
 /* Boston, MA  02111-1307 USA
 /**************************************************************************/
 
-getopt.ambigious={0}: volba ''{1}'' je nejednoznaï¿½nï¿½
-getopt.arguments1={0}: volba ''--{1}'' nepï¿½ipouï¿½tï¿½ argument
-getopt.arguments2={0}: volba ''{1}{2}'' nepï¿½ipouï¿½tï¿½ argument
-getopt.requires={0}: volba ''{1}'' vyï¿½aduje argument
-getopt.unrecognized={0}: nepï¿½ï¿½pustnï¿½ volba ''--{1}''
-getopt.unrecognized2={0}: nepï¿½ï¿½pustnï¿½ volba ''{1}{2}''
-getopt.illegal={0}: nepï¿½ï¿½pustnï¿½ volba -- {1}
-getopt.invalid={0}: neplatnï¿½ volba -- {1}
-getopt.requires2={0}: volba vyï¿½aduje argument -- {1}
-getopt.invalidValue=Neplatnï¿½ hodnota {0} parameteru 'has_arg' 
+getopt.ambigious={0}: volba ''{1}'' je nejednoznaèná
+getopt.arguments1={0}: volba ''--{1}'' nepøipou¹tí argument
+getopt.arguments2={0}: volba ''{1}{2}'' nepøipou¹tí argument
+getopt.requires={0}: volba ''{1}'' vy¾aduje argument
+getopt.unrecognized={0}: nepøípustná volba ''--{1}''
+getopt.unrecognized2={0}: nepøípustná volba ''{1}{2}''
+getopt.illegal={0}: nepøípustná volba -- {1}
+getopt.invalid={0}: neplatná volba -- {1}
+getopt.requires2={0}: volba vy¾aduje argument -- {1}
+getopt.invalidValue=Neplatná hodnota {0} parameteru 'has_arg' 
 
